--- a/site/src/pages/adm/paineladm/index.scss
+++ b/site/src/pages/adm/paineladm/index.scss
@@ -6,33 +6,33 @@
 
 @font-face {
   font-family: 'kronaone';
-  src: url('../../../public/assets/fonts/krona-one/KronaOne-Regular.ttf');
+  src: url('../../../../public/assets/fonts/krona-one/KronaOne-Regular.ttf');
 }
 
 @font-face {
   font-family: 'raleway';
-  src: url('../../../public/assets/fonts/Raleway/Raleway-VariableFont_wght.ttf');
+  src: url('../../../../public/assets/fonts/Raleway/Raleway-VariableFont_wght.ttf');
 }
 
 @font-face {
   font-family: 'imprima';
-  src: url('../../../public/assets/fonts/imprima/Imprima-Regular.ttf');
+  src: url('../../../../public/assets/fonts/imprima/Imprima-Regular.ttf');
 }
 
 @font-face {
   font-family: 'imprima2';
-  src: url('../../../public/assets/fonts/Imprima2/Imprima-Regular.ttf');
+  src: url('../../../../public/assets/fonts/Imprima2/Imprima-Regular.ttf');
 }
 
 
 @font-face {
   font-family: 'kodchasan';
-  src: url('../../../public/assets/fonts/Kodchasan/Kodchasan-Regular.ttf');
+  src: url('../../../../public/assets/fonts/Kodchasan/Kodchasan-Regular.ttf');
 }
 
 @font-face {
   font-family: 'montserrat';
-  src: url('../../../public/assets/fonts/Montserrat/static/Montserrat-Medium.ttf');
+  src: url('../../../../public/assets/fonts/Montserrat/static/Montserrat-Medium.ttf');
 }
 
 
